--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- This plugin automatically generates perfect title tags, meta descriptions,
+         and other SEO elements based on your page content and _config.yml. -->
     {% seo %}
+
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
     {% include header.html %}
+
     <main>
+        <!-- The content from your other .html and .md files will be injected here -->
         {{ content }}
     </main>
+
     {% include footer.html %}
+    
     <a href="#" id="back-to-top" title="Go to top">↑</a>
+
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </body>
 </html>
