--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 <article class="post-content section">
-    <div class="container-narrow">
+    <div class="container">
         <header class="post-header">
             <h1>{{ page.title | escape }}</h1>
             <p class="post-meta">{{ page.date | date: "%B %d, %Y" }}</p>
         </header>
+
         <div class="prose">
             {{ content }}
         </div>
+        
         <a href="{{ '/blog.html' | relative_url }}" class="button-secondary" style="margin-top: 40px;">← Back to All Posts</a>
     </div>
 </article>
