--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
         <nav>
             <div class="logo"><a href="{{ '/' | relative_url }}">KEYSTONE</a></div>
             <ul class="nav-links">
+                <!-- This Jekyll code automatically adds the 'active' class to the link of the current page -->
                 <li><a href="{{ '/services.html' | relative_url }}" class="{% if page.url == '/services.html' %}active{% endif %}">Services</a></li>
                 <li><a href="{{ '/portfolio.html' | relative_url }}" class="{% if page.url == '/portfolio.html' %}active{% endif %}">Portfolio</a></li>
                 <li><a href="{{ '/blog.html' | relative_url }}" class="{% if page.url == '/blog.html' %}active{% endif %}">Blog</a></li>
@@ -11,4 +12,3 @@
         </nav>
     </div>
 </header>
- 
