--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
     <div class="container">
+        <!-- The 'now' tag automatically updates the year for you -->
         <p>© {% now "Y" %} Keystone Integrated Systems. The Foundation for Your Innovation.</p>
     </div>
 </footer>
