--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-        <!-- The 'now' tag is replaced with a filter that automatically updates the year for you -->
+        <!-- This filter correctly displays the current year -->
         <p>© {{ site.time | date: "%Y" }} Keystone Integrated Systems. The Foundation for Your Innovation.</p>
     </div>
 </footer>
