--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
     <div class="container">
         <nav>
             <a href="{{ '/' | relative_url }}" class="logo-link" aria-label="Keystone Systems Homepage">
-                <svg class="logo-svg" viewBox="0 0 120 40" xmlns="http://www.w3.org/2000/svg">
+                <!-- THE FIX IS IN THE VIEWBOX ATTRIBUTE OF THIS SVG TAG -->
+                <svg class="logo-svg" viewBox="0 0 190 40" xmlns="http://www.w3.org/2000/svg">
                     <defs>
                         <linearGradient id="logo-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
                             <stop offset="0%" stop-color="var(--accent-color-1)"></stop>
