--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       <li><a href="{{ '/contact.html' | relative_url }}">Contact</a></li>
     </ul>
     <p class="footer-copyright">
-      © {{ 'now' | date: '%Y' }} Keystone Integrated Systems. All Rights Reserved.
+      © {{ site.time | date: '%Y' }} Keystone Integrated Systems. All Rights Reserved.
     </p>
   </div>
 </footer>
