--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <nav>
-      <a href="{{ '/' | relative_url }}" class="logo-link" aria-label="Keystone Systems Homepage">
+      <a href="{{ '/' | relative_url }}" class="logo-link" aria-label="CircuitX Systems Homepage">
         <svg class="logo-svg" viewBox="0 0 190 40" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="logo-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -11,7 +11,7 @@
           </defs>
           <path d="M0 0 H40 V40 H0 Z" fill="url(#logo-gradient)"></path>
           <path d="M10 10 H20 V15 H15 V25 H20 V30 H10 Z" fill="var(--bg-color)"></path>
-          <text x="50" y="29" font-family="Poppins, sans-serif" font-size="24" font-weight="600" fill="var(--text-color)">KEYSTONE</text>
+          <text x="50" y="29" font-family="Poppins, sans-serif" font-size="24" font-weight="600" fill="var(--text-color)">CIRCUITX</text>
         </svg>
       </a>
 
