--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,13 @@
-<footer>
-  <div class="container">
-    <ul class="footer-nav">
-      <li><a href="{{ '/' | relative_url }}">Home</a></li>
-      <li><a href="{{ '/services.html' | relative_url }}">Services</a></li>
-      <li><a href="{{ '/portfolio.html' | relative_url }}">Portfolio</a></li>
-      <li><a href="{{ '/about.html' | relative_url }}">About</a></li>
-      <li><a href="{{ '/blog.html' | relative_url }}">Blog</a></li>
-      <li><a href="{{ '/contact.html' | relative_url }}">Contact</a></li>
-    </ul>
-    <p class="footer-copyright">
-      © {{ site.time | date: '%Y' }} CircuitX Systems. All Rights Reserved.
-    </p>
-  </div>
+<footer class="site-footer">
+    <div class="container">
+        <div class="footer-links">
+            <a href="/">Home</a>
+            <a href="/services">Services</a>
+            <a href="/portfolio">Portfolio</a>
+            <a href="/about">About</a>
+            <a href="/blog">Blog</a>
+            <a href="/contact">Contact</a>
+        </div>
+        <p>© 2025 CircuitX Systems. All Rights Reserved.</p>
+    </div>
 </footer>
